fixed linkto bug, fixed expanding project element bug on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -161,8 +161,9 @@ p {
 }
 
 .collapsible-body p {
+    line-height: 2rem;
     margin: 0;
-    padding: 2rem;
+    padding: 5%;
 }
 
 .design-element {
